# simplecs

./: Cargo.toml  README.md
src/ecs/: Cargo.toml  lib.rs
src/id/: Cargo.toml  lib.rs
src/secs/: Cargo.toml  lib.rs
tests/: ecs.rs  secs.rs  simple.rs
